--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-frontend/node_modules/
+restaurant-frontend/node_modules/
 backend/node_modules/
 *.env
-frontend/build/
-frontend/dist/
+restaurant-frontend/build/
+restaurant-frontend/dist/
