--- a/restaurant-frontend/package.json
+++ b/restaurant-frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "restaurant-frontend",
   "version": "0.1.0",
+  "homepage": "https://harshrathod2434.github.io/Madras_Meals",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -17,7 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
