--- a/restaurant-frontend/package.json
+++ b/restaurant-frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "restaurant-frontend",
   "version": "0.1.0",
-  "homepage": "https://harshrathod2434.github.io/Madras_Meals",
+  "homepage": " ",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
